# Platform

./: .env  .gitignore  .gitmodules  .talismanrc  EXTENSIONS.md  Makefile  PLATFORM_CLEANUP_AND_ROBUSTNESS.md  Platform.code-workspace  README.md  compose.prod.yml  compose.yml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  package-lock.json  package.json  platform.code-workspace  sonar-project.properties  start-platform.sh  web.config
api-family/: .dockerignore  Dockerfile  Dockerfile.prod  db.json  import_db_json.py  migrate.py  pyproject.toml
api-family/app/: constants.py  exception.py  main.py  utils.py
api-family/app/api/: api.py  auth.py
api-family/app/core/: config.py
api-family/app/crud/: __init__.py  base.py  crud_course.py  crud_patch.py  crud_role.py  crud_user.py  crud_userrole.py
api-family/app/db/: counters.json  courses.json  db.py  roles.json  session.py  user_roles.json  user_roles_seed.json  users.json  users_seed.json
api-family/app/schemas/: __init__.py  course.py  patch.py  role.py  role_simple.py  tree.py  user.py  user_simple.py  userrole.py
api-family/app/scripts/: migrate_to_mongodb.py
api-family/app/serializers/: __init__.py  serializer.py
api-family/app/services/: storage.py
api-family/app/tests/: conftest.py
api-nei/: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  oauth.py  pyproject.toml  pytest.ini
api-nei/alembic/: env.py
api-nei/alembic/versions/: 3f1a2b4c5d6e_add_oidc_id_token_to_device_login.py  446509b8a9b0_.py  604576647082_first_commit.py  986d6f972720_add_joboffer_table.py  9fc0db742749_.py  b9e4c7f2a1d8_add_oauth_state_table.py  caaa223a3654_add_unique_constraint_to_faina_member_.py  eb4a5c7d8f12_add_authentik_sub_to_user_table.py  f766070f7e9e_.py
api-nei/app/: exception.py  main.py  templating.py  utils.py
api-nei/app/api/: api.py  deps.py  email.py  recaptcha.py
api-nei/app/core/: config.py  dynamic_oauth.py  extension_plugin.py  extension_scopes.py  logging.py
api-nei/app/crud/: __init__.py  crud_course.py  crud_event.py  crud_faina_member.py  crud_faina_role.py  crud_faina_roles.py  crud_job_offer.py  crud_merch.py  crud_merchandisings.py  crud_news.py  crud_note.py  crud_note_schoolyear.py  crud_note_subject.py  crud_note_teacher.py  crud_note_thank.py  crud_note_type.py  crud_notes.py  crud_notes_subject.py  crud_notes_types.py  crud_partner.py  crud_redirect.py  crud_rgm.py  crud_senior.py  crud_senior_student.py  crud_subject.py  crud_teacher.py  crud_team_colaborator.py  crud_team_member.py  crud_team_role.py  crud_user.py  crud_user_academic.py  crud_user_matriculation.py  crud_useracademics.py  crud_users.py  crud_video.py  crud_video_tag.py
api-nei/app/db/: 11jun.sql  README.md  backup-0001.sql  backup-0002.sql  backup-0003.sql  backup-0004.sql  backup-0005.sql  backup-0006.sql  base.py  base_class.py  init_db.py  session.py  setup.sql
api-nei/app/email-templates/: EmailRegistration.html  EmailRegistration.txt  MagicLink.html  MagicLink.txt  PasswordChanged.html  PasswordChanged.txt  PasswordReset.html  PasswordReset.txt
api-nei/app/models/: __init__.py  course.py  device_login.py  email.py  event.py  faina.py  faina_member.py  faina_role.py  history.py  job_offer.py  merch.py  news.py  note.py  note_schoolyear.py  note_subject.py  note_teacher.py  note_thank.py  note_type.py  oauth_state.py  partner.py  redirect.py  rgm.py  senior.py  senior_student.py  subject.py  teacher.py  team.py  team_colaborator.py  team_member.py  team_role.py  user.py  user_academic_details.py  video.py
api-nei/app/schemas/: __init__.py  course.py  event.py  faina.py  faina_member.py  faina_role.py  faina_roles.py  history.py  job_offer.py  merch.py  news.py  note.py  note_schoolyear.py  note_subject.py  note_teacher.py  note_thank.py  note_type.py  notes_subject.py  notes_teachers.py  notes_types.py  pagination.py  partner.py  redirect.py  rgm.py  senior.py  senior_student.py  subject.py  teacher.py  team.py  team_colaborator.py  team_member.py  team_roles.py  types.py  user.py  user_academic_details.py  user_ua.py  video_tag.py
api-nei/app/templates/: EmailRegistration.html  EmailRegistration.txt  NewEmailRegistration.html  NewEmailRegistration.txt  PasswordChanged.html  PasswordChanged.txt  PasswordReset.html  PasswordReset.txt
api-nei/app/tests/: conftest.py
api-tacaua/: .gitignore  Dockerfile  Dockerfile.prod  README.md  mypy.ini  pyproject.toml  pytest.ini
api-tacaua/app/: exception.py  main.py  openapi.py  utils.py
api-tacaua/app/api/: api.py  auth.py  deps.py  logger_router.py
api-tacaua/app/core/: config.py  logging.py
api-tacaua/app/crud/: __init__.py  base.py  competition.py  course.py  crud_course.py  crud_match.py  crud_team.py  group.py  match.py  modality.py  standings.py
api-tacaua/app/db/: backup-0001.sql  base.py  base_class.py  init_db.py
api-tacaua/app/models/: __init__.py  competition.py  course.py  group.py  match.py  modality.py  participant.py  standings.py  team.py
api-tacaua/app/schemas/: competition.py  course.py  group.py  match.py  modality.py  participant.py  standings.py  team.py
api-tacaua/app/tests/: conftest.py
backend/: .flake8  Dockerfile  Dockerfile.dev  README.md  example.db  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 604576647082_first_commit.py  9621069ee6e4_first_commit.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_faina.py  crud_faina_member.py  crud_faina_roles.py  crud_news.py  crud_notes.py  crud_notes_schoolyear.py  crud_notes_subject.py  crud_notes_teachers.py  crud_notes_thanks.py  crud_rgm.py  crud_seniors.py  crud_seniors_students.py  crud_tacaua_classification.py  crud_team.py  (+7 more)
backend/scripts/: backup-db.sh
rallytascas-api/: Dockerfile  Dockerfile.dev  pyproject.toml  teams.txt
rallytascas-api/app/: exception.py  main.py
tacaua-service/: pyproject.toml
tacaua-service/app/: exception.py  main.py  middleware.py  openapi.py  utils.py
(+1501 files in other folders)
