[tool.poetry]
name = "api-family"
version = "0.1.0"
description = "EI Family Service"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.13"
loguru = "^0.6.0"
python-multipart = "^0.0.18"
fastapi = "^0.123.5"
requests = "^2.32.4"
urllib3 = "^2.5.0"
Pillow = "^10.0.1"
pymongo = "^4.3.3"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
httpx = "^0.25.0"
certifi = "^2024.7.4"
starlette = "^0.49.1"
dnspython = "^2.6.1"
h11 = "^0.16.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
flake8 = "6.0.0"
uvicorn = "^0.18.3"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
