[tool.poetry]
name = "api-tacaua"
version = "0.1.0"
description = "Taça UA Service"
authors = []

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "6.0.0"
mypy = "^0.971"
pytest = "^7.1.3"
uvicorn = "^0.18.3"
SQLAlchemy = "^2.0.4"
psycopg2 = "^2.9.3"
pydantic = "^1.10.2"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
fastapi = "^0.83.0"
requests = "^2.28.1"
pytest-cov = "^3.0.0"
Pillow = "^9.2.0"
httpcore = "^0.16.2"
h11 = "^0.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
orjson = "^3.8.6"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
