[tool.poetry]
name = "api-tacaua"
version = "0.1.0"
description = "Taça UA Service"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["postgresql-psycopg2binary"], version = "^2.0.4"}
pydantic = "^1.10.2"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
fastapi = "0.90.0"
requests = "^2.28.1"
Pillow = "^9.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
orjson = "^3.8.6"
httpx = "^0.25.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
