[tool.poetry]
name = "api-tacaua"
version = "0.1.0"
description = "Taça UA Service"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["postgresql-psycopg2binary"], version = "^2.0.25"}
pydantic = "^2.6.0"
loguru = "^0.7.2"
python-multipart = "^0.0.7"
fastapi = "^0.109.1"
requests = "^2.31.0"
Pillow = "^10.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
orjson = "^3.9.15"
pydantic-settings = "^2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
