[tool.poetry]
name = "rallytascas-api"
version = "0.1.0"
description = "Rally Tascas Service"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.43"
psycopg2 = "^2.9.5"
pydantic = "^1.10.2"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
fastapi = "^0.86.0"
requests = "^2.28.1"
pytest-cov = "^4.0.0"
Pillow = "^9.3.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
