[tool.poetry]
name = "tacaua-service"
version = "0.1.0"
description = "Taça UA Service"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
