[tool.poetry]
name = "tacaua-service"
version = "0.1.0"
description = "Taça UA Service"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
pydantic = "^1.10.2"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
fastapi = "^0.83.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
